--- a/SampleNetCore31Wpf/SampleNetCore31Wpf.vbproj
+++ b/SampleNetCore31Wpf/SampleNetCore31Wpf.vbproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>SampleNetCore31Wpf</RootNamespace>
     <UseWPF>true</UseWPF>
+    <IncludePackageReferencesDuringMarkupCompilation>true</IncludePackageReferencesDuringMarkupCompilation>
   </PropertyGroup>
 
   <ItemGroup>
