--- a/Nukepayload2.SourceGenerators.MyWpfExtension/Nukepayload2.SourceGenerators.MyWpfExtension.vbproj
+++ b/Nukepayload2.SourceGenerators.MyWpfExtension/Nukepayload2.SourceGenerators.MyWpfExtension.vbproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <RootNamespace>Nukepayload2.SourceGenerators.MyWpfExtension</RootNamespace>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
     <Authors>Nukepayload2</Authors>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/Nukepayload2/MyWpfExtensionGenerator</PackageProjectUrl>
@@ -31,6 +31,7 @@ Can't use generated members?
     <PackageReleaseNotes>Ensure My.Application.MainWindow is My.Windows.MainWindow</PackageReleaseNotes>
     <Copyright>Copyright 2021 Nukepayload2</Copyright>
     <IncludeBuildOutput>false</IncludeBuildOutput>
+    <NoWarn></NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
