--- a/SampleNetWpfOnly/SampleNetWpfOnly.vbproj
+++ b/SampleNetWpfOnly/SampleNetWpfOnly.vbproj
@@ -1,11 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>SampleNetCore31Wpf</RootNamespace>
+    <TargetFramework>net9.0-windows</TargetFramework>
+    <RootNamespace>SampleNetWpfOnly</RootNamespace>
     <UseWPF>true</UseWPF>
-    <IncludePackageReferencesDuringMarkupCompilation>true</IncludePackageReferencesDuringMarkupCompilation>
   </PropertyGroup>
 
   <ItemGroup>
