Pack the readme file

--- a/Nukepayload2.SourceGenerators.MyWpfExtension/Nukepayload2.SourceGenerators.MyWpfExtension.vbproj
+++ b/Nukepayload2.SourceGenerators.MyWpfExtension/Nukepayload2.SourceGenerators.MyWpfExtension.vbproj
@@ -33,6 +33,7 @@ Generated members:
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <NoWarn></NoWarn>
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
